--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
+                <li><a href="/web5/portfolio/index.html">Hme</a></li>
                 <li><a href="/web5/portfolio/about.html">About</a></li>
                 <li><a href="/web5/portfolio/work.html">Work</a></li>
                 <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
