changed to the correct path

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mogra&family=Unkempt:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/web5/portfolio/css/app.css">
+<link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Lobster&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap" rel="stylesheet">
-<link rel="icon"  type="image/x-icon" href="/web5/portfolio/img/logo.png">
+<link rel="icon"  type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
 </head>
 
 <body>
@@ -24,16 +24,16 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -47,7 +47,7 @@
         <p class="title" id="aboutMe">About Me</p>
 
         <section id="mypic">
-            <img id="tracey" src="/web5/portfolio/img/tracey.jpg" alt="">
+            <img id="tracey" src="/TraceyV.github.io/img/tracey.jpg" alt="">
             <p>Hey there! My name is Tracey and I am a Graphic Designer based in Montreal.
                 I am passionate about turning complex ideas and visions into compelling visual stories. I make designs that connect and communicate with their surroundings and
                 with my knowledge in various Adobe Creative Suite, I am dedicated to bringing a client's request to life through innovative and high quality solutions.</p>
