--- a/caseStudy.html
+++ b/caseStudy.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Study</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/case.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/case.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -20,16 +20,16 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -43,55 +43,60 @@
         <h1 id="projectTitle">PSA Campaign; Organ Donation</h1><br>
     </div>
 
-   
-<div id="containerAB">
-     <div id="containerA">
-        <h2>&nbsp;Illustrations</h2> <br>
-        <img class="mainSPA" src="/web5/portfolio/img/sPA1.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA2.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA3.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA4.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA5.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA6.png" alt="">
-        <img class="mainSPA" src="/web5/portfolio/img/sPA7.png" alt="">
-    </div>
 
-    <div id="containerB">
-        <div>
-            <h2>&nbsp;About</h2><br>
-            <p>For this case-study, we were asked to do a PSA Campaign about organ donation, and this is to spread
-                awareness about the cause and encourage people to become donors.By definition, organ donation is the
-                process when someone authorizes an organ of their own to be removed and transplanted into another
-                person. It goes through legal procedures (paper works) with the donor’s consent or through a legal
-                guardian(s).</p>
+    <div id="containerAB">
+        <div id="containerA">
+            <h2>&nbsp;Illustrations</h2> <br>
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA1.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA2.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA3.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA4.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA5.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA6.png" alt="">
+            <img class="mainSPA" src="/TraceyV.github.io/img/sPA7.png" alt="">
         </div>
 
-        <div>
-            <h2>&nbsp;Process & Challenges</h2><br>
-            <p>I wanted to do something that makes some kind of metaphor of giving a piece of yourself to other people
-                or the other way around, and ultimately I decided to go for the latter as I am trying to reach potential
-                donors into signing up to become one and it's their "piece of the puzzle" that completes someone else. I
-                also chose to put the following tagline; save a life afterlife.
-                <br><br>The challenge about this project is about coming up with a way to integrate the chosen company's
-                colour palette to the illustrations and making the overall design and messages easy to see, effective
-                and attractive to the target audience.
-            </p>
-            <img src="/web5/portfolio/img/organSketch1.jpg" alt="">
+        <div id="containerB">
+            <div>
+                <h2>&nbsp;About</h2><br>
+                <p>For this case-study, we were asked to do a PSA Campaign about organ donation, and this is to spread
+                    awareness about the cause and encourage people to become donors.By definition, organ donation is the
+                    process when someone authorizes an organ of their own to be removed and transplanted into another
+                    person. It goes through legal procedures (paper works) with the donor’s consent or through a legal
+                    guardian(s).</p>
+            </div>
+
+            <div>
+                <h2>&nbsp;Process & Challenges</h2><br>
+                <p>I wanted to do something that makes some kind of metaphor of giving a piece of yourself to other
+                    people
+                    or the other way around, and ultimately I decided to go for the latter as I am trying to reach
+                    potential
+                    donors into signing up to become one and it's their "piece of the puzzle" that completes someone
+                    else. I
+                    also chose to put the following tagline; save a life afterlife.
+                    <br><br>The challenge about this project is about coming up with a way to integrate the chosen
+                    company's
+                    colour palette to the illustrations and making the overall design and messages easy to see,
+                    effective
+                    and attractive to the target audience.
+                </p>
+                <img src="/TraceyV.github.io/img/organSketch1.jpg" alt="">
+            </div>
         </div>
     </div>
-</div>
     <div id="containerC">
         <h2>Outcome</h2><br>
         <p> The following is the outcome of this project. I managed to created a few mockups that can possibly be used
             to promote the campaign and spread awareness. I tried to stay within the colour palette chosen when doing
             the design for the mockups.
         </p>
-        <img class="mockupPics" src="/web5/portfolio/img/billboardMockup.png" alt="">
-        <img class="mockupPics" src="/web5/portfolio/img/busstopMockup.png" alt="">
-        <img class="mockupPics" src="/web5/portfolio/img/magazineMockup.png" alt="">
-        <img class="mockupPics" src="/web5/portfolio/img/igMockup.png" alt="">
-        <img class="mockupPics" src="/web5/portfolio/img/t-shirtMockup.png" alt="">
-        <img class="mockupPics" src="/web5/portfolio/img/sPA.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/billboardMockup.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/busstopMockup.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/magazineMockup.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/igMockup.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/t-shirtMockup.png" alt="">
+        <img class="mockupPics" src="/TraceyV.github.io/img/sPA.png" alt="">
     </div>
 
     <footer>
