--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="icon"  type="image/x-icon" href="/web5/portfolio/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="icon"  type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap" rel="stylesheet">
 </head>
 
@@ -17,16 +17,16 @@
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
