--- a/projects/project1.html
+++ b/projects/project1.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body1">
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/img/threePointP.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/img/threePointP.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -63,7 +63,7 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImage" src="/web5/portfolio/img/illustrator.png" alt="">
+                    <img class="softwareImage" src="/TraceyV.github.io/img/illustrator.png" alt="">
                 </div>
             </section>
         </div>
@@ -77,7 +77,7 @@
                 took my time digitalizing it in Illustrator using the 3D tool on the app itself.
                 <br><br>The challenge lies on doing a 3 point perspective starting from above and going down.
             </p><br>
-            <img class="draft" src="/web5/portfolio/projectImg/3pp.jpg" alt="">
+            <img class="draft" src="/TraceyV.github.io/projectImg/3pp.jpg" alt="">
         </section>
 
         <section>
@@ -85,14 +85,14 @@
             <p class="details"><br>I made sure that the illustration made sense in a way that if you were looking from
                 above, you would see things trully shrink like the windows and the buildings.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/threePointP.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/threePointP.png" alt="">
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project6.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project6.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project2.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project2.html">Next Project</a></button>
     </div>
 
     <footer>
