--- a/projects/project12.html
+++ b/projects/project12.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 12</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/projectImg/clientWebsiteOfficial.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/projectImg/clientWebsiteOfficial.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -66,10 +66,10 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img id="figma" src="/web5/portfolio/img/figma.png" alt="">
-                    <img class="softwareImg" src="/web5/portfolio/img/html.png" alt="">
-                    <img class="softwareImg" src="/web5/portfolio/img/css.png" alt="">
-                    <img class="softwareImg" src="/web5/portfolio/img/photoshop.png" alt="">
+                    <img id="figma" src="/TraceyV.github.io/img/figma.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/html.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/css.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/photoshop.png" alt="">
                 </div>
             </section>
         </div>
@@ -87,10 +87,10 @@
             <br><br>The challenge for this client project was the communication between the initial client and I, as I had set deadlines for specific steps to be done and the client would either be too busy or
             occupied by other things to get back to me.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/clientWebsiteQ-1.png" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/clientWebsiteQ-2.png" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/clientWebsiteQ-3.png" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/clientWebsiteQ-4.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/clientWebsiteQ-1.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/clientWebsiteQ-2.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/clientWebsiteQ-3.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/clientWebsiteQ-4.png" alt="">
             <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/design/pcy1qrwPhDnxYSuFUdDh5c/Client-Website?node-id=0-1&embed-host=share" allowfullscreen></iframe>
         </section>
 
@@ -104,16 +104,16 @@
             I found a free hosting website called Vercel and put the client's code in there. Overall, the client and I were pleased with the result of the website.
             <br>Click the following image to view Client Website. 
             </p><br>
-            <a href="/web5/client/index.html"><img class="outcome" src="/web5/portfolio/projectImg/clientWebsiteOfficial.png" alt=""></a>
+            <a href="/web5/client/index.html"><img class="outcome" src="/TraceyV.github.io/projectImg/clientWebsiteOfficial.png" alt=""></a>
             <img src="" alt="">
         </section>
     </div>
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project11.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project11.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project1.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project1.html">Next Project</a></button>
     </div>
 
     <footer>
