--- a/projects/project2.html
+++ b/projects/project2.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body2">
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/img/isometric.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/img/isometric.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -63,7 +63,7 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/web5/portfolio/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
                 </div>
             </section>
         </div>
@@ -79,7 +79,7 @@
                 my shape so that it remains isometric likes the
                 blocked trees.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/isometricGrid.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/isometricGrid.png" alt="">
         </section>
 
         <section>
@@ -87,14 +87,14 @@
             <p class="details"><br>To help me design in isometric, I made multiple grid guidelines on the canvas. I also
                 used gradient colours to enhance the overall visual of the illustration.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/isometric.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/isometric.png" alt="">
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project1.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project1.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project3.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project3.html">Next Project</a></button>
     </div>
 
     <footer>
