--- a/projects/project3.html
+++ b/projects/project3.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 3</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body3">
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/img/bookCover.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/img/bookCover.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -65,8 +65,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/web5/portfolio/img/illustrator.png" alt="">
-                    <img class="softwareImg" src="/web5/portfolio/img/indesign.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/indesign.png" alt="">
                 </div>
             </section>
         </div>
@@ -82,7 +82,7 @@
                 that does not really have any correlation towards one another and make sure that there are returning
                 elements for all three of the book covers.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/bcSketch.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/bcSketch.png" alt="">
         </section>
 
         <section>
@@ -91,17 +91,17 @@
                 perspective to illustrate each of the locations. There is also always a moon and a bunch of clouds that
                 are centered above that change colours based on the colour palette of the locations.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/bc1.jpg" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/bc2.jpg" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/bc3.jpg" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/bc1.jpg" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/bc2.jpg" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/bc3.jpg" alt="">
 
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project2.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project2.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project4.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project4.html">Next Project</a></button>
     </div>
 
     <footer>
