--- a/projects/project5.html
+++ b/projects/project5.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 5</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body id="body5">
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/img/chocoBox.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/img/chocoBox.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -62,7 +62,7 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/web5/portfolio/img/illustrator.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/illustrator.png" alt="">
                 </div>
             </section>
         </div>
@@ -77,7 +77,7 @@
                 <br><br>The challenge was making it have a chocolate vibe while using graphic elements and a colour
                 palette that were relevant to the theme of the project.
             </p><br>
-            <img class="outcome" src="/web5/portfolio/projectImg/chocoBoxSketch.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/chocoBoxSketch.png" alt="">
 
         </section>
 
@@ -87,15 +87,15 @@
                 less colours as possible and I used a font that has symbols to create some of the graphic elements
                 of the box.
             </p><br>
-                <img class="outcome" src="/web5/portfolio/projectImg/chocoBox1.png" alt="">
-                <img class="outcome" src="/web5/portfolio/projectImg/chocoBox2.png" alt="">
+                <img class="outcome" src="/TraceyV.github.io/projectImg/chocoBox1.png" alt="">
+                <img class="outcome" src="/TraceyV.github.io/projectImg/chocoBox2.png" alt="">
         </section>
     </div>
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project4.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project4.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project6.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project6.html">Next Project</a></button>
     </div>
 
     <footer>
