--- a/projects/project7.html
+++ b/projects/project7.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 7</title>
-    <link rel="icon" type="image/x-icon" href="/web5/portfolio/img/logo.png">
-    <link rel="stylesheet" href="/web5/portfolio/css/app.css">
-    <link rel="stylesheet" href="/web5/portfolio/css/project.css">
+    <link rel="icon" type="image/x-icon" href="/TraceyV.github.io/img/logo.png">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/app.css">
+    <link rel="stylesheet" href="/TraceyV.github.io/css/project.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Micro+5&family=Oswald:wght@200..700&family=Potta+One&display=swap"
         rel="stylesheet">
@@ -16,22 +16,22 @@
 <body>
     <div class="onTop">
         <section id="logo">
-            <img src="/web5/portfolio/img/logo.png" alt="">
+            <img src="/TraceyV.github.io/img/logo.png" alt="">
         </section>
         <nav>
             <section id="desktop">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section id="mobile">
-                <li><a href="/web5/portfolio/work.html">&#8678; Back</a></li>
-                <li><a href="/web5/portfolio/index.html">Home</a></li>
-                <li><a href="/web5/portfolio/about.html">About</a></li>
-                <li><a href="/web5/portfolio/work.html">Work</a></li>
-                <li><a href="/web5/portfolio/contact.html">Contacts</a></li>
+                <li><a href="/TraceyV.github.io/work.html">&#8678; Back</a></li>
+                <li><a href="/TraceyV.github.io/index.html">Home</a></li>
+                <li><a href="/TraceyV.github.io/about.html">About</a></li>
+                <li><a href="/TraceyV.github.io/work.html">Work</a></li>
+                <li><a href="/TraceyV.github.io/contact.html">Contacts</a></li>
             </section>
             <section class="hamburgerLines" onclick="myFunction(this)">
                 <div class="line1"></div>
@@ -46,7 +46,7 @@
     </div>
 
     <div id="detailsA">
-        <div id="projectPic"><img src="/web5/portfolio/img/magazineCover.png" alt=""></div>
+        <div id="projectPic"><img src="/TraceyV.github.io/img/magazineCover.png" alt=""></div>
 
         <div id="infoSections">
             <section>
@@ -63,8 +63,8 @@
             <section>
                 <h2>&nbsp;Software used</h2>
                 <div id="softwareUsed">
-                    <img class="softwareImg" src="/web5/portfolio/img/photoshop.png" alt="">
-                    <img class="softwareImg" src="/web5/portfolio/img/indesign.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/photoshop.png" alt="">
+                    <img class="softwareImg" src="/TraceyV.github.io/img/indesign.png" alt="">
 
                 </div>
             </section>
@@ -88,8 +88,8 @@
                 I had to take into account the appropriate font size, colour and placement of each text components
                 strategically rather than just randomly placing them in the magazine layout.
             </p><br>
-            <img  class="outcome" src="/web5/portfolio/projectImg/rawPicKeshi.png" alt="">
-            <img class="outcome" src="/web5/portfolio/projectImg/editedKeshi.png" alt="">
+            <img  class="outcome" src="/TraceyV.github.io/projectImg/rawPicKeshi.png" alt="">
+            <img class="outcome" src="/TraceyV.github.io/projectImg/editedKeshi.png" alt="">
         </section>
 
         <section>
@@ -107,16 +107,16 @@
                 ratio, making it visually pleasing to the eyes, while also emphasizing his hands position - they put
                 importance on his abilities to use musical instruments.
             </p><br>
-                <img class="outcome" src="/web5/portfolio/projectImg/keshi.png" alt="">
+                <img class="outcome" src="/TraceyV.github.io/projectImg/keshi.png" alt="">
             
         </section>
     </div>
 
 
     <div id="buttonProjects">
-        <button id="previous" class="buttons"><a href="/web5/portfolio/projects/project6.html">Previous
+        <button id="previous" class="buttons"><a href="/TraceyV.github.io/projects/project6.html">Previous
                 Project</a></button>
-        <button id="next" class="buttons"><a href="/web5/portfolio/projects/project8.html">Next Project</a></button>
+        <button id="next" class="buttons"><a href="/TraceyV.github.io/projects/project8.html">Next Project</a></button>
     </div>
 
     <footer>
